examples/test/testpolicy1667.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1667
  namespace: namespace78
spec:
  podSelector:
    matchLabels:
      key5: value16
      key25: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value46
          key48: value18
          key39: value27
      podSelector:
        matchLabels:
          key17: value43
